# diff-native

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  biome.json  eslint.config.js  package.json  playwright.config.ts  tsconfig.json
.agents/: resume  setup
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
bench/: README.md  tsconfig.json
bench/baselines/: master.bun.json  master.node.json
bench/fixtures/: lockfile-new.txt  lockfile-old.txt  package-lock-new.json  package-lock-old.json  source-new.ts  source-old.ts
bench/src/: cli.ts  json-confidence.ts  measure.ts  runner.ts  types.ts  utils.ts  validate.ts
scripts/: browser-entry-verification.mjs  package-entry-verification.mjs  prepare-node-snippets.mjs  prepare-node-wasm-snippets.mjs  release.sh
src/: browser-index.js  change.rs  esm-index.js  json.cjs  json.js  lib.rs  node-index.js  options.rs  patch-boundary.js  word-helpers.js
src/convert/: xml.rs
src/diff/: base.rs  character.rs  character_test.rs  component_pool.rs  component_pool_test.rs  components.rs  components_test.rs  css.rs  css_test.rs  json.rs  json_test.rs  line.rs  line_test.rs  memory_pool.rs  memory_pool_test.rs  mod.rs  sentences.rs  sentences_test.rs  token.rs  word.rs  word_test.rs
src/patch/: apply.rs  apply_test.rs  create.rs  create_test.rs  line_endings.rs  line_endings_test.rs  mod.rs  parse.rs  parse_test.rs  reverse.rs  reverse_test.rs  types.rs
src/util/: array.rs  distance_iterator.rs  mod.rs  params.rs  string.rs
tests/: browser-entry.playwright.ts  conformance.test.ts  setup.ts
tests/diff/: character.test.ts  css.test.ts  json.test.ts  line.differential.test.ts  (+3 more)
types/: index.d.ts
(+22 files in other folders)
